<?xml version="1.0" encoding="utf-8"?>
<!--This project creat by SAID MOTYA for secret gfx group members-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >


    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        android:background="@drawable/raduis"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/color_pop_rate">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/layou_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:src="@drawable/ic_help_rate"
                        tools:ignore="ContentDescription" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        tools:ignore="UselessParent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/_5sdp">

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/consentTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:gravity="center"
                                android:text="@string/rate_title"
                                android:fontFamily="@font/riot"
                                android:textSize="@dimen/_8sdp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:fontFamily="@font/riot"
                                android:text="@string/rate_desc"
                                android:textColor="@color/color_text_list"
                                android:textSize="@dimen/_8sdp" />


                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:layout_marginTop="@dimen/_3sdp"
                        android:id="@+id/rate_me"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/raduis2"
                        android:text="@string/rate_ok"
                        android:textStyle="bold"
                        android:textSize="@dimen/_8sdp"
                        android:fontFamily="@font/riot"
                        android:textColor="@android:color/white"
                        android:paddingLeft="@dimen/_30sdp"
                        android:paddingRight="@dimen/_30sdp"
                        android:visibility="visible"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/_10sdp"

                        />


                    <TextView
                        android:id="@+id/rate_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:fontFamily="@font/riot"
                        android:textColor="@color/white"
                        android:text="@string/rate_on"
                        android:textSize="@dimen/_6sdp" />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>










</RelativeLayout>