<?xml version="1.0" encoding="utf-8"?>
<!--This project creat by SAID MOTYA for secret gfx group members-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_background_1"
    tools:context=".apps.Activities.Activity_Content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_above="@+id/adView">


        <RelativeLayout
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp">

            <com.AttackOnTitan.AOT_2.RECOTA_STUDIOguide.apps.UI.ImageViews
                android:id="@+id/ic_back"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/_20sdp"
                android:text="@string/list_title"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.AttackOnTitan.AOT_2.RECOTA_STUDIOguide.apps.UI.Particles
                android:id="@+id/particles"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/searching"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.wang.avi.AVLoadingIndicatorView
                        style="@style/AVLoadingIndicatorView"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerInParent="true"
                        app:indicatorColor="@color/color_searching_list"
                        app:indicatorName="LineSpinFadeLoaderIndicator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/riot"
                        android:text="@string/searching_content"
                        android:textColor="@color/color_searching_list"
                        android:textSize="@dimen/_10sdp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/failed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_failed2" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:fontFamily="@font/riot"
                        android:text="@string/searching_content_failed"
                        android:textColor="@color/color_searching_list"
                        android:textSize="@dimen/_10sdp" />

                    <Button
                        android:id="@+id/tryAgain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_try"
                        android:fontFamily="@font/riot"
                        android:paddingLeft="@dimen/_25sdp"
                        android:paddingRight="@dimen/_25sdp"
                        android:text="@string/searching_list_try"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8sdp" />


                </LinearLayout>


            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bar1">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/relative_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_alignParentBottom="true">

            <com.AttackOnTitan.AOT_2.RECOTA_STUDIOguide.apps.UI.ImageViews
                android:id="@+id/next"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_next"
                />

            <com.AttackOnTitan.AOT_2.RECOTA_STUDIOguide.apps.UI.ImageViews
                android:id="@+id/preview"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:rotation="180"
                android:visibility="gone"
                android:src="@drawable/ic_next"
                />


        </RelativeLayout>


    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        tools:ignore="RtlHardcoded">

    </RelativeLayout>


</RelativeLayout>